--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1> About Me</h1>
-    <img alt="Image of me?" src="aboutme/me.png" >
+    <img alt="Image of me?" src="https://github.com/ericpvaughn/wdd130/aboutme/me.png" >
     <h2> Eric Vaughn</h2>
     <h2>No Nickname, but you can call me Eric</h2>
     <p>Hi there.
