--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1> About Me</h1>
-    <img alt="Image of me at a windy beach." src="aboutme/images/me.png" >
+    <img src="https://ericpvaughn.github.io/wdd130/aboutme/images/me.png" alt="A pic of me at a windy beach.">
     <h2> Eric Vaughn</h2>
     <h2>No Nickname, but you can call me Eric</h2>
     <p>Hi there.
