--- a/wwr/index.html
+++ b/wwr/index.html
@@ -37,7 +37,7 @@
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <img class="card-img" src=".https://github.com/ericpvaughn/wdd130/blob/f70def36cba128e84845b9574bc6b572d0f9b34b/wwr/images/camping.jpeg" alt="tent in mountains">
+            <img class="card-img" src="https://github.com/ericpvaughn/wdd130/blob/f70def36cba128e84845b9574bc6b572d0f9b34b/wwr/images/camping.jpeg" alt="tent in mountains">
             <img class="icon" src="../images/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
