--- a/wwr/index.html
+++ b/wwr/index.html
@@ -39,7 +39,7 @@
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+            <img class="card-img" src="https://github.com/ericpvaughn/wdd130/blob/a21151eb53e89c349f19d023641b758aec54488d/wwr/images/camping.jpeg" alt="tent in mountains">
             <img class="icon" src="images/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
