--- a/wwr/index.html
+++ b/wwr/index.html
@@ -34,22 +34,22 @@
     </div>
     <main class="home-grid">
         <section class="rivers-card">
-            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+            <img class="card-img" src="https://ericpvaughn.github.io/wdd130/wwr/images/rivers.jpg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <img class="card-img" src="https://github.com/ericpvaughn/wdd130/blob/a21151eb53e89c349f19d023641b758aec54488d/wwr/images/camping.jpeg" alt="tent in mountains">
+            <img class="card-img" src="https://ericpvaughn.github.io/wdd130/wwr/images/camping.jpeg" alt="tent in mountains">
             <img class="icon" src="images/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
         <section class="rapids-card">
-            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+            <img class="card-img" src="https://ericpvaughn.github.io/wdd130/wwr/images/rapids.jpg" alt="rafting boat">
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
         <div id="background"></div>
-        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
+        <img class="mountains" src="https://ericpvaughn.github.io/wdd130/wwr/images/mountains.jpg" alt="Misty mountains">
   
     <section class="msg">
         <h2>More Than Just The Thrill</h2>
