--- a/wwr/index.html
+++ b/wwr/index.html
@@ -34,7 +34,7 @@
     </div>
     <main class="home-grid">
         <section class="rivers-card">
-            <img src="images/rivers.jpeg" alt="river in forest">
+            <img src="https://ericpvaughn.github.io/wdd130/wwr/images/rivers.jpeg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
             <h2>Rivers</h2>
         </section>
