--- a/wwr/index.html
+++ b/wwr/index.html
@@ -44,7 +44,7 @@
             <h2>Camping</h2>
         </section>
         <section class="rapids-card">
-            <img class="card-img" src="https://ericpvaughn.github.io/wdd130/wwr/images/rapids.jpg" alt="rafting boat">
+            <img class="card-img" src="https://ericpvaughn.github.io/wdd130/wwr/images/rapids.jpeg" alt="rafting boat">
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
