--- a/wwr/index.html
+++ b/wwr/index.html
@@ -49,7 +49,7 @@
             <h2>Rapids</h2>
         </section>
         <div id="background"></div>
-        <img class="mountains" src="https://ericpvaughn.github.io/wdd130/wwr/images/mountains.jpg" alt="Misty mountains">
+        <img class="mountains" src="https://ericpvaughn.github.io/wdd130/wwr/images/mountains.jpeg" alt="Misty mountains">
   
     <section class="msg">
         <h2>More Than Just The Thrill</h2>
