--- a/wwr/index.html
+++ b/wwr/index.html
@@ -49,7 +49,7 @@
             <h2>Rapids</h2>
         </section>
         <div id="background"></div>
-        <img class="mountains" src="https://ericpvaughn.github.io/wdd130/wwr/images/mountains.jpeg" alt="Misty mountains">
+        <img src="https://ericpvaughn.github.io/wdd130/wwr/images/mountains.jpeg" alt="Misty mountains">
   
     <section class="msg">
         <h2>More Than Just The Thrill</h2>
@@ -58,7 +58,7 @@
     </section>
     </main>
     <footer>
-        <p>Dry Oar &copy; 2022 -- Eric Vaughn</p>
+        <p>Dry Oar &copy; 2022 * Eric Vaughn</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
