--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <li><a href="wwr/index.html">White Water Rafting Website</a></li>
         <li><a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a></li>
         <li><a href="positioning.html">Positioning Activity</a></li>
+        <li><a href="snailmail/site-plan.html">Personal Siteplan</a></li>
         <li><a href="#">Personal Website</a></li>
-        <li><a href="#">Personal Siteplan</a></li>
+        
     </ul>
 </body>
 </html>
