--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a></li>
         <li><a href="positioning.html">Positioning Activity</a></li>
         <li><a href="snailmail/site-plan.html">Personal Siteplan</a></li>
-        <li><a href="#">Personal Website</a></li>
+        <li><a href="snailmail/index.html">Personal Website</a></li>
         
     </ul>
 </body>
