--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <li><a href="wwr/index.html">White Water Rafting Website</a></li>
         <li><a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a></li>
         <li><a href="positioning.html">Positioning Activity</a></li>
-        <li><a href="snailmail/site-plan.html">Personal Siteplan</a></li>
-        <li><a href="snailmail/index.html">Personal Website</a></li>
+        <li><a href="snailmail/site-plan.html">SnailMail (Personal) Siteplan</a></li>
+        <li><a href="snailmail/index.html">SnailMail (Personal) Website</a></li>
         
     </ul>
 </body>
