--- a/snailmail/environmental.html
+++ b/snailmail/environmental.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SnailMail</title>
-    <link rel="stylesheet" href="styles/style.css">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SnailMail</title>
+<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div id="content">
+<div id="content">
 
-        <!-- Header -->
-        <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/snailmaillogo.png" alt="SnailMail Logo">
-            </a>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="rivers.html">Why Do Snails Matter?</a>
-                <a href="environmental.html">Environmental Stewardship</a>
-                <a href="contactus.html">Contact Us</a>
-            </nav> 
-        </header>
+<!-- Header -->
+<header>
+<a id="logo_link" href="index.html">
+<img class="logo" src="images/snailmaillogo.png" alt="SnailMail Logo">
 
-        <main>
+</a>
+<p class="logotitle">
+SnailMail </p>
+
+<nav>
+<a href="index.html">Home</a>
+<a href="snailsmatter.html">Why Do Snails Matter?</a>
+<a href="environmental.html">Environmental Stewardship</a>
+<a href="contactus.html">Contact Us</a>
+</nav>
+
+
+</header>
+
+        <main class="enviro-grid">
              <!-- Image and Textbox -->
              <section class="enviro-card">
                 <img class="oceanpic" src="images/coast.jpg" alt="Dusky Ocean Coastline">
+                </section>
+
+                <section class="text-steward">
                 <h1>Environmental Stewardship</h1>
                 <p class="enviropara">Environmental Preservation With growing climate change and the need for rich soil to sustain our foot patterns, snails have become a strong indicator of whether we are succeeding at maintaining the environment or doing more damage. Snails are our friends, snails are our protectors, snails need our help. Our environmental preservation depends solely on the individual effort of a combined effort in any way possible, and our goal is to reach out to your inner-child and remind you of your snail friends you had on rainy days (and hopefully didn't pour salt on). Our world is hurting and needs some serious attention to its betterment.
                 <br><br/>
