--- a/snailmail/index.html
+++ b/snailmail/index.html
@@ -1,71 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SnailMail</title>
-    <link rel="stylesheet" href="styles/style.css">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SnailMail</title>
+<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div id="content">
+<div id="content">
 
-        <!-- Header -->
-        <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/snailmaillogo.png" alt="SnailMail Logo">
-            </a>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="snailsmatter.html">Why Do Snails Matter?</a>
-                <a href="environmental.html">Environmental Stewardship</a>
-                <a href="contactus.html">Contact Us</a>
-            </nav> 
-        </header>
+<!-- Header -->
+<header>
+<a id="logo_link" href="index.html">
+<img class="logo" src="images/snailmaillogo.png" alt="SnailMail Logo">
 
-        <main class="home-grid">
-             <!-- First Image and Textbox -->
-             <section class="intro-card">
-                <img class="intro-pic" src="images/snail3.jpg" alt="Brown Snail on Leaf">
-                <h1>Introduction</h1>
-                <p class="intropara">You may be asking yourself the following question: why snails? Why would anyone devote a website to facts about snails and the environment? I'll answer your question by asking you a question in return: why wouldn't anyone devote a website to facts about snails and the environment?
-                <br><br/>
-                This website will provide you with a number of different facts about snails, ranging from how to take care of them, what to do if they become a pest, and what you can do to prevent the loss of another beloved species. The information provided on this website will be purely informative and up to your own interpretation of what you will do with said factoids. The overarching goal, of course, is environmental preservation, but seeing that we need to break it down to bite-sized pieces, we are going to start with something that is literally bite-sized: snails.</p>
-             </section>
+</a>
+<p class="logotitle">
+SnailMail </p>
 
-              <!-- Second Image and Textbox -->
-             <section class="snailmatter-button">
-                <img class="matterpic" src="images/snail2.jpg" alt="Small Snail on Grass">
-                <h2>Why Do Snails Matter?</h2>
-             </section>
-
-            <!-- Third Image and Textbox -->
-            <section class="environmental-button">
-                <img class="enviropic" src="images/mountainrange.jpg" alt="Misty mountainrange">
-                <h2>Environmental Stewardship</h2>
-             </section>
-
-        </main>
+<nav>
+<a href="index.html">Home</a>
+<a href="snailsmatter.html">Why Do Snails Matter?</a>
+<a href="environmental.html">Environmental Stewardship</a>
+<a href="contactus.html">Contact Us</a>
+</nav>
 
 
-          <!-- Footer -->
-          <footer>
-            <p>SnailMail &copy; 2022 -- Eric Vaughn</p>
-            <p><a href="site-plan.html">Site Plan</a></p>
-            <p><a href="contactus.html">Contact Us</a></p>
-            <div class="social">
-                <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
-                </a>
-                <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">
-                </a>
-                <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
-                </a>
-            </div>
-        </footer>
+</header>
 
-    </div>    
+<main class="home-grid">
+<!-- First Image and Textbox -->
+<section class="intro-card">
+<img class="intro-pic" src="images/snail3.jpg" alt="Brown Snail on Leaf">
+
+</section>
+<section class="text-intro">
+<h1>Introduction</h1>
+<p class="intropara">You may be asking yourself the following question: why snails? Why would anyone devote a website to facts about snails and the environment? I'll answer your question by asking you a question in return: why wouldn't anyone devote a website to facts about snails and the environment?
+<br><br/>
+This website will provide you with a number of different facts about snails, ranging from how to take care of them, what to do if they become a pest, and what you can do to prevent the loss of another beloved species. The information provided on this website will be purely informative and up to your own interpretation of what you will do with said factoids. The overarching goal, of course, is environmental preservation, but seeing that we need to break it down to bite-sized pieces, we are going to start with something that is literally bite-sized: snails.</p>
+</section>
+
+<!-- Second Image and Textbox -->
+<section class="snailmatter">
+<img class="matterpic" src="images/snail2.jpg" alt="Small Snail on Grass">
+
+</section>
+<section class="text-snail">
+<h2>Why Do Snails Matter?</h2>
+</section>
+
+<!-- Third Image and Textbox -->
+<section class="environmental">
+<img class="enviropic" src="images/mountainrange.jpg" alt="Misty mountainrange">
+
+</section>
+<section class="text-environmental">
+<h2>Environmental Stewardship</h2>
+</section>
+
+</main>
+
+
+<!-- Footer -->
+<footer>
+<p>SnailMail &copy; 2022 -- Eric Vaughn</p>
+<p><a href="site-plan.html">Site Plan</a></p>
+<p><a href="contactus.html">Contact Us</a></p>
+<div class="social">
+<a href="https://facebook.com" target="_blank">
+<img src="images/facebook.png" alt="fb icon">
+</a>
+<a href="https://twitter.com" target="_blank">
+<img src="images/twitter.png" alt="twitter icon">
+</a>
+<a href="https://instagram.com" target="_blank">
+<img src="images/instagram.png" alt="instagram icon">
+</a>
+</div>
+</footer>
+
+</div>
 </body>
 </html>
