--- a/snailmail/snailsmatter.html
+++ b/snailmail/snailsmatter.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SnailMail</title>
-    <link rel="stylesheet" href="styles/style.css">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SnailMail</title>
+<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div id="content">
+<div id="content">
 
-        <!-- Header -->
-        <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/snailmaillogo.png" alt="SnailMail Logo">
-            </a>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="rivers.html">Why Do Snails Matter?</a>
-                <a href="environmental.html">Environmental Stewardship</a>
-                <a href="contactus.html">Contact Us</a>
-            </nav> 
-        </header>
+<!-- Header -->
+<header>
+<a id="logo_link" href="index.html">
+<img class="logo" src="images/snailmaillogo.png" alt="SnailMail Logo">
 
-        <main>
+</a>
+<p class="logotitle">
+SnailMail </p>
+
+<nav>
+<a href="index.html">Home</a>
+<a href="snailsmatter.html">Why Do Snails Matter?</a>
+<a href="environmental.html">Environmental Stewardship</a>
+<a href="contactus.html">Contact Us</a>
+</nav>
+
+
+</header>
+
+        <main class="matter-grid">
             <!-- Image and Textbox -->
             <section class="matter-card">
                 <img class="snailmatterpic" src="images/snail4.jpg" alt="Spiral-Shelled Snail">
+                </section>
+
+                <section class="text-whymatter">
                 <h1>Why Do Snails Matter?</h1>
                 <p class="matterpara">So Why the Snail? The reason for the snail is when we, as the current generation, raising the future generation, teach people to be aware of something as minute and minuscule as the humble snail, we teach them responsibility for the earth. We teach them the natural order of how things work and try to place ourselves within that circle of life so as to be progressive in our lives while being progressive with our sustainability. We are stewards of this earth and are naturally given the responsibility to replace what we take-- therefore, let us learn about what to do when we find a snail.
                 <br><br/>
