--- a/snailmail/index.html
+++ b/snailmail/index.html
@@ -28,13 +28,16 @@ SnailMail </p>
 
 
 </header>
+<div class="bg-image"></div>
 
 <main class="home-grid">
 <!-- First Image and Textbox -->
 <section class="intro-card">
 <img class="intro-pic" src="images/snail3.jpg" alt="Brown Snail on Leaf">
-
 </section>
+
+
+
 <section class="text-intro">
 <h1>Introduction</h1>
 <p class="intropara">You may be asking yourself the following question: why snails? Why would anyone devote a website to facts about snails and the environment? I'll answer your question by asking you a question in return: why wouldn't anyone devote a website to facts about snails and the environment?
@@ -48,7 +51,7 @@ This website will provide you with a number of different facts about snails, ran
 
 </section>
 <section class="text-snail">
-<h2>Why Do Snails Matter?</h2>
+<a id="matterlink" href="snailsmatter.html">Why Do Snails Matter?</a>
 </section>
 
 <!-- Third Image and Textbox -->
@@ -57,7 +60,7 @@ This website will provide you with a number of different facts about snails, ran
 
 </section>
 <section class="text-environmental">
-<h2>Environmental Stewardship</h2>
+<a id="envirolink" href="environmental.html">Environmental Stewardship</a>
 </section>
 
 </main>
